Modified list of users. In progress: user edits

--- a/genericBook/Gemfile
+++ b/genericBook/Gemfile
@@ -54,3 +54,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'mongoid'
 gem 'bson_ext'
 gem 'devise'
+gem 'bootstrap-sass'
